# llm-zoomcamp

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
01-agentic-rag/: 01-rag-starter.ipynb  01-rag.ipynb  02-rag-complete-with-minsearch.ipynb  03-sqlite-ingest.ipynb  04-rag-complete-with-sqlitesearch.ipynb  05-function-calling.ipynb  06-agentic-loop.ipynb  notes.md  rag_helper.py
01-agentic-rag/homework/: homework.ipynb  homework.md
02-vector-search/: 01-vector-search.ipynb  02-vector-search-pgvector.ipynb  notes.md
02-vector-search/homework/: homework.ipynb  homework.md
03-orchestration/homework/: homework.md
04-evaluation/: 01-data-gen.ipynb  02-search-eval.ipynb  03-rag-evals.ipynb  04-llm-judge.ipynb  notes.md
04-evaluation/homework/: homework.ipynb
05-monitoring/: app.py  assistant.py  dashboard.py  db_init.py  db_query.py  docker-compose.yaml  generate_data.py  judge.py  metrics.py  notes.md
05-monitoring/homework/: homework.md  homework.py
06-project/: README.md
zoomcamp/: evaluation_utils.py  rag_helper.py
