[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "LLM Zoomcamp by DataTalks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
]
