[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zoomcamp*"]

[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "LLM Zoomcamp by DataTalks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "openai>=2.41.0",
    "pandas-stubs~=3.0.3",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.0",
    "streamlit>=1.59.2",
    "tokenizers>=0.22.2",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.1",
    "wget>=3.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.20.1",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.1",
]
